aml-syntax/src/snapshots/aml_syntax__expressions__test__not.snap
---
source: aml-syntax/src/expressions.rs
expression: parse(input)
---
Binary:
  lhs:
    Binary:
      lhs:
        Primitive:
          Int: 1
      rhs:
        Primitive:
          Int: 2
      op: NotEqual
  rhs:
    Binary:
      lhs:
        Primitive:
          Int: 3
      rhs:
        Primitive:
          Int: 4
      op: NotEqual
  op: And
