aml-syntax/src/snapshots/aml_syntax__expressions__test__simple_add.snap
---
source: aml-syntax/src/expressions.rs
expression: parse(input)
---
Binary:
  original: 1 + 2
  lhs:
    Primitive:
      original: "1"
      value:
        Int: 1
      location:
        start_byte: 0
        end_byte: 1
  rhs:
    Primitive:
      original: "2"
      value:
        Int: 2
      location:
        start_byte: 4
        end_byte: 5
  op: Plus
  location:
    start_byte: 0
    end_byte: 5
