aml-syntax/src/snapshots/aml_syntax__expressions__test__simple_list.snap
---
source: aml-syntax/src/expressions.rs
expression: parse(input)
---
List:
  original: "[1, 2, a, 4]"
  items:
    - Primitive:
        original: "1"
        value:
          Int: 1
        location:
          start_byte: 1
          end_byte: 2
    - Primitive:
        original: "2"
        value:
          Int: 2
        location:
          start_byte: 4
          end_byte: 5
    - Ident:
        value: a
        location:
          start_byte: 7
          end_byte: 8
    - Primitive:
        original: "4"
        value:
          Int: 4
        location:
          start_byte: 10
          end_byte: 11
  location:
    start_byte: 0
    end_byte: 12
