aml-syntax/src/snapshots/aml_syntax__expressions__test__unclosed_bracket.snap
---
source: aml-syntax/src/expressions.rs
expression: parse(input)
---
List:
  original: "[1, 2, 3"
  items:
    - Primitive:
        original: "1"
        value:
          Int: 1
        location:
          start_byte: 1
          end_byte: 2
    - Primitive:
        original: "2"
        value:
          Int: 2
        location:
          start_byte: 4
          end_byte: 5
    - Primitive:
        original: "3"
        value:
          Int: 3
        location:
          start_byte: 7
          end_byte: 8
    - Error:
        original: "3"
        location:
          start_byte: 7
          end_byte: 8
        token: Eof
  location:
    start_byte: 0
    end_byte: 8
